add task for nvm install

--- a/roles/workstation-common.yml
+++ b/roles/workstation-common.yml
@@ -36,3 +36,9 @@
     community.general.snap:
       name:
         - authy
+        
+  - name: Install nvm(node version manager)
+    shell: >
+      curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+    args:
+      creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
