add gnome tweaks

--- a/roles/workstation-common.yml
+++ b/roles/workstation-common.yml
@@ -13,6 +13,7 @@
         - syncthing
         - keepassxc
         - steam
+        - gnome-tweaks
             
   - name: Enable Flathub repository
     become: yes
