--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -10,6 +10,7 @@
       - keepassxc
       - steam
       - gnome-tweaks
+      - evolution-ews
             
 - name: Enable Flathub repository
   become: yes
