--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -32,6 +32,7 @@
       - org.gimp.GIMP
       - com.visualstudio.code
       - org.flameshot.Flameshot
+      - com.mattjakeman.ExtensionManager
 
 - name: Install Snaps
   community.general.snap:
