add gimp flatpak

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -33,6 +33,7 @@
       - com.visualstudio.code
       - org.flameshot.Flameshot
       - com.mattjakeman.ExtensionManager
+      - org.gimp.GIMP
 
 - name: Install Snaps
   community.general.snap:
