added peek and ffmpeg flatpaks

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -34,6 +34,8 @@
       - org.flameshot.Flameshot
       - com.mattjakeman.ExtensionManager
       - org.gimp.GIMP
+      - com.uploadedlobster.peek
+      - org.freedesktop.Platform.ffmpeg-full
 
 - name: Install Snaps
   community.general.snap:
