changed audio plugins install

--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -33,7 +33,10 @@
       - Cadence
       - surge
       - Rack-v2
-      - vst-DISTRHO\*
       - dexed
       - lutris
       - gnome-shell-extension-appindicator
+
+- name: Install audio plugins
+  become: yes
+  command: dnf install vst-DISTRHO\*
