comment out ffmpeg flatpak for now
Need to figure out how to have it always select the latest version. Right now it presents 3 options and causes all the flatpaks to abort installing

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -35,7 +35,8 @@
       - com.mattjakeman.ExtensionManager
       - org.gimp.GIMP
       - com.uploadedlobster.peek
-      - org.freedesktop.Platform.ffmpeg-full
+      # Need to manually run this one as it presents several versions and we always want the latest
+      #- org.freedesktop.Platform.ffmpeg-full
 
 - name: Install Snaps
   community.general.snap:
